--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11-slim
 
-# Install system dependencies that might be needed
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
@@ -16,14 +16,15 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Install Pathway and related packages
-RUN pip install pathway unstructured tiktoken openai langchain
-
 # Copy application code
 COPY . .
 
-# Expose port if needed
-EXPOSE 8000
+# Create output directories
+RUN mkdir -p /app/output/theories /app/output/quizzes /app/output/quiz_attempts /app/output/adaptations /app/output/agent_decisions
 
-# Default command
-CMD ["python", "main.py"]
+# Expose ports
+EXPOSE 8000 8501
+
+# Default command (can be overridden in docker-compose)
+CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
